# castled

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  buf.gen.yaml  buf.yaml  build.rs  expected.txt  go.Dockerfile  go.mod  go.sum
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yaml  create_tag.yaml  release-castled.yaml  release.yaml
examples/: Makefile  crawler.rs  ping_server.rs
examples/crawler/: main.go
examples/manifests/: crawler.yaml  gateway.yaml  tunnel.yaml
proto/: message.proto
sdk/go/castle/: client.go  client_test.go  logger.go  tunnel.go
sdk/go/client/: client.go  logger.go  tunnel.go
sdk/go/pb/proto/: message.pb.go
sdk/go/proto/: message.pb.go  message_grpc.pb.go
src/: bridge.rs  constant.rs  event.rs  helper.rs  io.rs  lib.rs  shutdown.rs  socket.rs  util.rs
src/client/: client.rs  mod.rs  tunnel.rs
src/protocol/: mod.rs  validate.rs
src/server/: control_server.rs  data_server.rs  mod.rs  port.rs
src/server/tunnel/: http.rs  mod.rs  tcp.rs  udp.rs
src/util/: mod.rs
tests/: Cargo.toml  call_lib.rs  lib.rs
tests/common/: mod.rs
tests/e2e/: ping.py  test_basic_tcp.sh  test_client_close_when_server_close.sh  test_close_server_gracefully.sh  test_download_file.sh  test_http_tunnel_with_domain.sh  test_http_tunnel_with_given_port.sh  test_http_tunnel_with_subdomain.sh  test_tcp_local_server_not_start.sh  test_tcp_tunnel_to_google_dns.sh  test_tcp_with_tunnel_http_server.sh  test_udp_reuse_data_streaming.sh  test_udp_tunnel_to_google_dns.sh  test_upload_file.sh  test_upload_file_through_http_tunnel.sh  test_upload_file_through_tunnel.sh  util.sh
tests/e2e/castle_go/: main.go
tests/e2e/file_server/: main.go
tests/e2e/ping/: ping.go
tests/e2e/udprint/: main.go
tests/src/: lib.rs
tests/tests/: clients.rs
tunneld-client/: Cargo.toml
tunneld-client/src/: client.rs  lib.rs  tunnel.rs
tunneld-pkg/: Cargo.toml
tunneld-pkg/src/: bridge.rs  debug.rs  event.rs  io.rs  lib.rs  otel.rs  util.rs
tunneld-protocol/: Cargo.toml  build.rs
tunneld-protocol/src/: lib.rs  message.proto  message.rs  validate.rs
tunneld-server/: Cargo.toml
tunneld-server/src/: control_server.rs  data_server.rs  lib.rs  manager.rs  server.rs  transport.rs  validate.rs
tunneld-server/src/tunnel/: http.rs  mod.rs  tcp.rs  udp.rs
