[package]
name = "tunneld"
version = "0.1.1-alpha.1"
edition = "2021"
authors = ["rrylee1994@gmail.com"]
license = "MIT"
build = "build.rs"
repository = "https://github.com/openosaka/tunneld"
readme = "README.md"
description = "Best tunnel for development and kubernetes"
include = ["src/**/*", "proto/message.proto",  "LICENSE", "README.md", "build.rs"]

[lib]
name = "tunneld"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
tokio = { version = "1.10.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
async-trait = "0.1.80"
anyhow = "1.0.86"
tonic = "0.11.0"
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
futures = "0.3.30"
uuid = { version = "1.9.1", features = ["v4", "serde"] }
hyper = { version = "1.4.0", features = ["full"] }
hyper-util = { version = "0.1.5", features = ["full"] }
dashmap = "6.0.1"
bytes = "1.6.0"
http-body-util = { version = "0.1.2" }
http = "1.1.0"
http-body = "1.0.0"
futures-util = "0.3.30"
fastrand = "2.1.0"
prost = "0.12.6"

[build-dependencies]
tonic-build = "0.11.0"
which = "6.0.1"

[dev-dependencies]
tokio = { version = "1.10.1", features = ["full"] }
tokio-util = "0.7.11"
tracing-subscriber = "0.3.18"
wiremock = "0.6.0"
bytes ={ version = "1.6.0" }
reqwest = "0.12.5"
http = "1.1.0"
anyhow = "1.0.86"

[[bin]]
name = "tunneld"
path = "src/bin/tunneld.rs"

[[bin]]
name = "tunnel"
path = "src/bin/tunnel.rs"
