[package]
name = "castled"
version = "0.0.1-alpha.1"
edition = "2021"
authors = ["rrylee1994@gmail.com"]
license = "MIT"
build = "build.rs"
repository = "https://github.com/openosaka/castle"
readme = "README.md"
description = "Best tunnel for development and kubernetes"
include = ["src/**/*", "proto/**/*", "LICENSE", "README.md", "build.rs"]

[lib]
name = "castled"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
tokio = { version = "1.10.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
console-subscriber = "0.3.0"
async-trait = "0.1.80"
anyhow = "1.0.86"
tonic = "0.11.0"
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
futures = "0.3.30"
uuid = { version = "1.9.1", features = ["v4", "serde"] }
hyper = { version = "1.4.0", features = ["full"] }
hyper-util = { version = "0.1.5", features = ["full"] }
dashmap = "6.0.1"
bytes = "1.6.1"
http-body-util = { version = "0.1.2" }
http = "1.1.0"
http-body = "1.0.0"
futures-util = "0.3.30"
fastrand = "2.1.0"
prost = "0.12.6"
async-shutdown = "0.2.2"
httparse = "1.9.4"

[build-dependencies]
tonic-build = "0.11.0"
which = "6.0.1"

[dev-dependencies]
tokio = { version = "1.10.1", features = ["full"] }
tokio-util = "0.7.11"
tracing-subscriber = "0.3.18"
wiremock = "0.6.0"
bytes ={ version = "1.6.1" }
reqwest = { version = "0.12.5", features = ["json"] }
http = "1.1.0"
anyhow = "1.0.86"
url = "2"
serde = { version = "1.0.204", features = ["derive"] }

[[bin]]
name = "castle"
path = "src/bin/castle.rs"

[[bin]]
name = "castled"
path = "src/bin/castled.rs"

[features]
# Include nothing by default
default = []

full = [
	"util",
	"debug"
]

util = []
debug = []

[[example]]
name = "crawler"
path = "examples/crawler.rs"
required-features = ["full"]

[[test]]
name = "lib"
path = "tests/lib.rs"
