[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tokio = { version = "1.10.1", features = ["full"] }
tokio-util = "0.7.11"
tracing-subscriber = "0.3.18"
tunneld-server = { path = "../tunneld-server" }
tunneld-client = { path = "../tunneld-client" }
tunneld-pkg = { path = "../tunneld-pkg" }
wiremock = "0.6.0"
bytes ={ version = "1.6.0" }
reqwest = "0.12.5"
http = "1.1.0"
anyhow = "1.0.86"
