[package]
name = "tunneld-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "tunneld_server"
path = "src/lib.rs"

[dependencies]
tunneld-protocol = { path = "../tunneld-protocol" }
tunneld-pkg = { path = "../tunneld-pkg" }
clap = { version = "4.5.7", features = ["derive"] }
tokio = { version = "1.10.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.86"
tonic = "0.11.0"
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
futures = "0.3.30"
uuid = { version = "1.9.1", features = ["v4", "serde"] }
dashmap = "6.0.1"

[[bin]]
name = "tunneld"
path = "src/bin/main.rs"
